# timetoevent

./: .gitignore  LICENSE.md  README.md  collect-app.ps1  firebase.json  huyna copy.yml  huyna.yml  index.html  package-lock.json  package.json  pubspec.yaml  tailwind.config.js  timetoevent-export.txt  tsconfig.json  vite.config.ts
.dart_tool/: package_config.json  package_config_subset
.github/workflows/: build.yml  ci.yml  main.yml
DOCS/timetoevent-DOCS/: package-lock.json  package.json
Server/: go.mod  main.go
android/app/: build.gradle.kts  google-services.json
assets/source/: Иконка TimeToEvent.psd
docs/: API.md  ARCHITECTURE.md  BRANCH.md  CHANGELOG.md  COMMANDS.md  COMMITS.md  CONTRIBUTING.md  CRYPTO.md  FAQ.md  INSTALL.md  PROTOCOL.md  README.md  TODO  TROUBLESHOOTING.md  USAGE.md
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: firebase_options.dart  main.dart
lib/dialogs/: add_event_dialog.dart  language_dialog.dart  showIntervalDialog.dart  theme_dialog.dart
lib/l10n/: app_locale.dart
lib/models/: event.dart  language_options.dart  theme_options.dart
linux/: CMakeLists.txt
src/: App.tsx  index.css  routeTree.gen.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: discovery.rs  events.rs  mod.rs  pairing.rs  reminders.rs  sync.rs
src-tauri/src/crypto/: aes.rs  codes.rs  ecdh.rs  mod.rs
src-tauri/src/db/: migrations.rs  mod.rs  sqlite.rs
src-tauri/src/discovery/: mdns.rs  mod.rs
src-tauri/src/models/: event.rs  mod.rs  peer.rs  reminder.rs
src-tauri/src/transport/: mod.rs  websocket.rs
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+65 files in other folders)
