[package]
name = "timetoevent"
version = "0.5.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "timetoevent_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-notification = "2.3.3"
tauri-plugin-fs = "2.5.1"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-shell = "2.3.5"
tauri-plugin-autostart = "2.5.1"
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-os = "2.3.2"
tauri-plugin-log = "2.8.0"
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"
mdns = "3.0.0"
local-ip-address = "0.6.13"
if-watch = "3.2.2"
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
aes-gcm = "0.10.3"
hkdf = "0.13.0"
rand = "0.8.6"
sha2 = "0.11.0"
hmac = "0.13.0"
qrcode = "0.14.1"
image = "0.25.10"
tokio = { version = "1.52.3", features = ["full"] }
tokio-tungstenite = "0.29.0"
rusqlite = { version = "0.40.1", features = ["bundled"] }
bincode = "1.3.3"
uuid = { version = "1.23.3", features = ["v4"] }
chrono = "0.4.45"
hex = "0.4.3"
base64 = "0.22.1"
log = "0.4.33"
futures-util = "0.3.32"
hostname = "0.4.2"
socket2 = "0.5"
